--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "raspberry_pi_server"
+name = "dummy-server"
 version = "0.1.0"
 edition = "2021"
 
@@ -9,3 +9,10 @@ serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
 reqwest = { version = "0.11", features = ["json"] }
 tokio = { version = "1", features = ["full"] }
+sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "sqlite"] }
+dotenvy = "0.15.7"
+chrono = "0.4.38"
+
+[default]
+address = "0.0.0.0"
+port = 8000
